# bh-mapeditor

./: .clang-format  .gitignore  CMakeLists.txt
editor/: CMakeLists.txt  main.cpp
editor/editor/: editor.h
editor/editor/ui/: mapinfo.cpp  objectlist.h  spawnpopup.cpp
editor/map/: map.cpp  serializer.cpp  serializer.h
editor/map/object/: mapobject.h  objecttypes.cpp
editor/swz/: swz.h  well512.cpp
editor/util/: imageresource.cpp  imageresource.h  logger.cpp  logger.h
launcher/: CMakeLists.txt  launch.bat  main.cpp
rawdata-proxy/: CMakeLists.txt  FlashRuntimeExtensions.h  RawData.def  air.lib  dllmain.cpp
src/: main.cpp
src/editor/: editor.cpp  editor.h  map.cpp  map.h  mapdata.cpp  mapdata.h
src/editor/object/: mapobject.h  objecttypes.cpp  objecttypes.h
src/editor/ui/: mapinfo.cpp  mapinfo.h  objectinfo.cpp  objectinfo.h  objectlist.cpp  objectproperties.cpp  objectproperties.h  objectviewe.cpp  objectviewer.cpp  objectviewer.h  spawnpopup.cpp  spawnpopup.h
src/map/: map.cpp  map.h  serializer.cpp  serializer.h
src/map/object/: mapobject.h  objecttypes.cpp  objecttypes.h
src/swz/: decrypt.cpp  encrypt.cpp  swz.cpp  swz.h  well512.h
src/util/: logger.cpp  logger.h  selectimage.cpp  selectimage.h
